+ Support for collapse empty counters * Ensure icons without counters are square

--- a/css/awe-share.less
+++ b/css/awe-share.less
@@ -15,14 +15,16 @@
 .awe-share{
 	a{
 		padding:.6em .44em;
-		width:2.3em;
+		width:3.2em;
+		min-height: 3.2em;
 		text-align:center;
 		display:inline-block;
-		// For compatibility with twitter bootstrap etc, which overrides box sizing
-		-webkit-box-sizing: content-box;
-		-moz-box-sizing: content-box;
-		box-sizing: content-box;
+		// For compatibility with if twitter bootstrap etc. is not avilable
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
 		text-decoration: none;
+		vertical-align: top;
 		i{
 			display: block;
 		}
@@ -36,12 +38,21 @@
 		}
 	}
 }
-
+.awe-share-collapse-empty{
+	a{
+		span{
+			&:after{
+				content: '';
+				display: none;
+			}
+		}
+	}
+}
 // Vertical
 .awe-share-vertical{
 	a{
 		display:block;
-		min-height:2em;
+		min-height:3.2em;
 	}
 }
 
